force-app/main/default/objects/AA_SFMC_85UDn000000006TMAQ__dlm/AA_SFMC_85UDn000000006TMAQ__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Activation_Audience</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Activation_Audience</objectCategory>
        <referenceEntityName>Activation_Audience</referenceEntityName>
    </mktDataModelAttributes>
</CustomObject>