force-app/main/default/objects/AA_SFMC_85UDn000000006TMAQ__dlm/fields/Activation_Publish_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Activation_Publish_Timestamp__c</fullName>
    <label>Activation Publish Timestamp</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Activation_Audience</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Activation_Publish_Timestamp</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>