force-app/main/default/objects/AA_SFMC_85UDn000000006TMAQ__dlm/fields/Delta_Type__c.field-meta.xml
<CustomField>
    <fullName>Delta_Type__c</fullName>
    <label>Delta Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Activation_Audience</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Delta_Type</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>