force-app/main/default/objects/AA_SFMC_85UDn000000006TMAQ__dlm/fields/Hash_Activation_Record__c.field-meta.xml
<CustomField>
    <fullName>Hash_Activation_Record__c</fullName>
    <label>Activation Record Hash</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Activation_Audience</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Hash_Activation_Record</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>