force-app/main/default/objects/AA_SFMC_85UDn000000006TMAQ__dlm/fields/Inactivated_On__c.field-meta.xml
<CustomField>
    <fullName>Inactivated_On__c</fullName>
    <label>Inactivated On</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Activation_Audience</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Inactivated_On</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>