force-app/main/default/objects/AA_SFMC_85UDn000000006TMAQ__dlm/fields/Segmented_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Segmented_Entity_Id__c</fullName>
    <label>Segmented Entity Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Activation_Audience</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Segmented_Entity_Id</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>